第二次提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,13 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 #logging.level.com.nowcoder.community=debug
 #logging.file=
+# MailProperties
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=hao18218496011@163.com
+spring.mail.password=GBLGOPMYLJLVJCVC
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+# community
+community.path.domain=http://localhost:8080
+community.path.upload=d:/zuomian/JavaEE/upload
