--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,46 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 # community
 community.path.domain=http://localhost:8080
 community.path.upload=d:/zuomian/JavaEE/upload
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
+# KafkaProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
+# ElasticsearchProperties
+spring.data.elasticsearch.cluster-name=nowcoder
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+# TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+# wk
+wk.image.command=d:/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage=d:/wk-images
+# qiniu
+qiniu.key.access=zoMOkfWOUQwZwCfrBBo9Lk1LbMRaiWaZh1DSwMMo
+qiniu.key.secret=pjyL3jGbQW_NRkqxiZKOatIc93JYxLjaVZNwbeJ0
+qiniu.bucket.header.name=community6header
+quniu.bucket.header.url=http://rc11v0qr4.hn-bkt.clouddn.com
+qiniu.bucket.share.name=community6share
+qiniu.bucket.share.url=http://rc11vc64w.hn-bkt.clouddn.com
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
+# actuator
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info,caches
